# docs/swagger.yaml
@@ -1,4 +1,4 @@
-basePath: /api/v1
+basePath: /clearscript-api-gateway
 definitions:
   get.Author:
     properties:
@@ -59,7 +59,6 @@ definitions:
           $ref: '#/definitions/get.Permission'
         type: array
     type: object
-host: localhost:8080
 info:
   contact:
     email: support@swagger.io
@@ -73,7 +72,7 @@ info:
   title: ClearScript API Gateway
   version: "1.0"
 paths:
-  /lessons/{id}:
+  /api/v1/lessons/{id}:
     get:
       consumes:
       - application/json
@@ -100,7 +99,7 @@ paths:
       summary: Get lesson by ID
       tags:
       - lessons
-  /users/{id}:
+  /api/v1/users/{id}:
     get:
       consumes:
       - application/json
